--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,6 +15,12 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
+$nanumgothic: 'NanumBarunGothic YetHangul','함초롬돋움 LVT','HCR Dotum LVT','함초롬바탕 LVT',
+            'HCR Batang LVT','본고딕','Source Han Sans K','본고딕 KR','Source Han Sans KR','Noto Sans CJK KR',
+            '나눔바른고딕 옛한글','나눔명조 옛한글','NanumMyeongjo YetHangul','은 바탕','Un Batang','돋움 옛한글',
+            'Dotum Old Hangul','바탕 옛한글','Batang Old Hangul','굴림 옛한글','NewGulim Old Hangul','궁서 옛한글',
+            'Gungsuh Old Hangul','맑은 고딕','Malgun Gothic','함초롬돋움','HCR Dotum','함초롬바탕','HCR Batang',
+            'Code2000',sans-serif;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
