--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -31,3 +31,11 @@ $georgia: Georgia, serif;
     @content;
   }
 }
+
+@font-face {
+  font-family: 'NanumBarunGothic YetHangul';
+  src: local('NanumBarunGothic YetHangul'),
+  url('/NanumBarunGothic-YetHangul.woff2') format('woff2'),
+  url('/NanumBarunGothic-YetHangul.woff') format('woff'),
+  url('/NanumBarunGothic-YetHangul.ttf') format('truetype');
+}
