--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
   background: $white;
-  font: 18px/1.4 $nanumgothic;
+  font: medium/1.4 $nanumgothic;
   color: $darkGray;
 }
 
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: x-large;
   a {
     color: inherit;
   }
