--- a/style.scss
+++ b/style.scss
@@ -284,9 +284,18 @@ footer {
 }
 
 table {
-  vertical-align: middle;
   width: 100%;
 }
+
+tr:nth-of-type(2n) {
+    background-color: lightgray;
+}
+
+td, th {
+    vertical-align: middle;
+    padding: 5px;
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
