--- a/style.scss
+++ b/style.scss
@@ -296,6 +296,10 @@ td, th {
     padding: 5px;
 }
 
+th {
+  font-weight: bold;
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
