--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,7 +14,7 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
-$nanumgothic: 'NanumBarunGothic YetHangul', 'CharisSILW', sans-serif;
+$nanumgothic: 'NanumBarunGothic YetHangul', 'DomaineText', sans-serif;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
@@ -37,29 +37,21 @@ $georgia: Georgia, serif;
 
 /* use Charis SIL - Regular in .woff format */
 @font-face {
-    font-family: CharisSILW;
-    src: url('/blog/CharisSIL-R.woff');
+    font-family: DomaineText;
+    src: url('/blog/DomaineTextWeb-Regular.woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 /* use Charis SIL - Italic in .woff format */
 @font-face {
-    font-family: CharisSILW;
+    font-family: DomaineText;
     font-style: italic;
-    src: url('/blog/CharisSIL-I.woff');
+    src: url('/blog/DomaineTextWeb-Italic.woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
 @font-face {
-    font-family: CharisSILW;
+    font-family: DomaineText;
     font-weight: bold;
-    src: url('/blog/CharisSIL-B.woff');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
-}
-
-@font-face {
-    font-family: CharisSILW;
-    font-weight: bold;
-    font-style: italic;
-    src: url('/blog/CharisSIL-BI.woff');
+    src: url('/blog/DomaineTextWeb-Bold.woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
