--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
   background: $white;
-  font: medium/1.4 $nanumgothic;
+  font: 14pt/1.5 $nanumgothic;
   color: $darkGray;
 }
 
