--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background: $white;
+  background: rgb(230, 221, 222);
   font: 14pt/1.5 $nanumgothic;
   color: $darkGray;
 }
