--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,7 +10,7 @@ $black: #000;
 $darkerGray: #222;
 $darkGray: #333;
 $gray: #666;
-$lightGray: #aaa;
+$lightGray: rgb(107, 78, 82);
 $white: #fff;
 
 // Font stacks
