--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,7 +11,7 @@ $darkerGray: #222;
 $darkGray: #333;
 $gray: #666;
 $lightGray: rgb(107, 78, 82);
-$white: #fff;
+$white: rgb(230, 221, 222);
 
 // Font stacks
 $nanumgothic: 'NanumBarunGothic YetHangul', 'DomaineText', sans-serif;
