--- a/style.scss
+++ b/style.scss
@@ -72,8 +72,12 @@ a {
   color: $blue;
   text-decoration: none;
 	cursor: pointer;
+  border-bottom: 1px solid #f5f1f2;
+box-shadow: inset 0 -4px 0 #f5f1f2;
+	transition: background 0.4s ease-out;
   &:hover, &:active {
     color: $blue;
+background: #f5f1f2;
   }
 }
 
