--- a/style.scss
+++ b/style.scss
@@ -68,15 +68,21 @@ p {
   margin: 15px 0;
 }
 
+
 a {
-  color: $blue;
+color: $blue;
   text-decoration: none;
 	cursor: pointer;
+  &:hover, &:active {
+    color: $blue;
+  }
+}
+
+.main > a {
   border-bottom: 1px solid #f5f1f2;
 box-shadow: inset 0 -4px 0 #f5f1f2;
 	transition: background 0.4s ease-out;
   &:hover, &:active {
-    color: $blue;
 background: #f5f1f2;
   }
 }
