--- a/style.scss
+++ b/style.scss
@@ -78,7 +78,7 @@ color: $blue;
   }
 }
 
-#main > a {
+#main a {
   border-bottom: 1px solid #f5f1f2;
 box-shadow: inset 0 -4px 0 #f5f1f2;
 	transition: background 0.4s ease-out;
